# comp-builders

./: .editorconfig  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  README.md  USER_GUIDE.md  pyproject.toml
comp_builders/: __init__.py  async_result.py  builder.py  option.py  result.py  validation.py
docs/: examples.md  railway-oriented-programming.md
examples/: __init__.py  api_workflow.py  etl_job.py  ml_pipeline.py
tests/: test_async_result.py  test_builder.py  test_examples.py  test_option.py  test_public_api.py  test_result.py  test_scaffold.py  test_validation.py
typing_tests/: test_public_api_types.py
